Fix readableDate locale in heading component and fallback links on langswitch component

--- a/src/assets/styles/partials/_postlist.scss
+++ b/src/assets/styles/partials/_postlist.scss
@@ -29,6 +29,7 @@
 
   &__description {
     font-size: $size-step--1;
+    line-height: $size-step-0;
     letter-spacing: 0;
     margin-bottom: 0;
   }
